# realxtend-naali-deps

./: ProjectHome.md
0.1/runtime_deps/dbus/: readme.txt
Caelum/: Caelum.doxygen
Caelum/main/: Caelum_vs9.vcproj
Caelum/main/include/: CaelumSystem.h  GroundFog.h
OpenJPEG/: CMakeLists.txt  LibOpenJPEG.vcproj
PythonQt/examples/PyCPPWrapperExample/: CustomObjects.cpp
PythonQt/examples/PyCustomMetaTypeExample/: CustomObject.cpp  example.py
PythonQt/examples/PyDecoratorsExample/: main.cpp
PythonQt/examples/PyGettingStarted/: main.cpp
PythonQt/examples/PyLauncher/: main.cpp
PythonQt/extensions/PythonQt_QtAll/: PythonQt_QtAll.cpp  PythonQt_QtAll.pro
PythonQt/generated_cpp/com_trolltech_qt_core/: PythonQtWrapper_QAbstractAnimation.cpp  PythonQtWrapper_QAbstractItemModel.h  PythonQtWrapper_QAbstractListModel.cpp  PythonQtWrapper_QAbstractTableModel.cpp  PythonQtWrapper_QAbstractTransition.h  PythonQtWrapper_QAnimationGroup.cpp  PythonQtWrapper_QBasicTimer.cpp  PythonQtWrapper_QBasicTimer.h  PythonQtWrapper_QBitArray.h  PythonQtWrapper_QBuffer.h  PythonQtWrapper_QByteArray.cpp  PythonQtWrapper_QByteArrayMatcher.cpp  PythonQtWrapper_QChildEvent.cpp  PythonQtWrapper_QCoreApplication.cpp  PythonQtWrapper_QCoreApplication.h  PythonQtWrapper_QCryptographicHash.cpp  PythonQtWrapper_QCryptographicHash.h  PythonQtWrapper_QDataStream.cpp  PythonQtWrapper_QDate.cpp  PythonQtWrapper_QDate.h  PythonQtWrapper_QDateTime.cpp  PythonQtWrapper_QDirIterator.cpp  PythonQtWrapper_QDirIterator.h  PythonQtWrapper_QEvent.cpp  PythonQtWrapper_QEvent.h  PythonQtWrapper_QEventLoop.cpp  PythonQtWrapper_QEventLoop.h  PythonQtWrapper_QFile.cpp  PythonQtWrapper_QFile.h  PythonQtWrapper_QFileInfo.h  PythonQtWrapper_QFileSystemWatcher.cpp  PythonQtWrapper_QFileSystemWatcher.h  PythonQtWrapper_QFinalState.cpp  PythonQtWrapper_QHistoryState.h  PythonQtWrapper_QIODevice.cpp  PythonQtWrapper_QIODevice.h  PythonQtWrapper_QLibraryInfo.cpp  PythonQtWrapper_QLocale.h  PythonQtWrapper_QMargins.cpp  PythonQtWrapper_QMimeData.cpp  (+70 more)
PythonQt/generated_cpp/com_trolltech_qt_gui/: PythonQtWrapper_QAbstractButton.cpp  PythonQtWrapper_QAbstractItemDelegate.cpp  (+412 more)
PythonQt/generator/: abstractmetalang.cpp  fileout.cpp  fileout.h  generator.cpp  generator.h  generator.pro  main.h  metajava.h  qrc_generator.cpp  setupgenerator.cpp  setupgenerator.h  shellgenerator.h  typeparser.cpp  typesystem.cpp  typesystem_core-qtscript.xml  typesystem_core.xml  typesystem_webkit.xml
PythonQt/src/: PythonQt.cpp  PythonQtClassInfo.cpp  PythonQtClassInfo.h  PythonQtConversion.cpp  PythonQtInstanceWrapper.cpp  PythonQtInstanceWrapper.h  PythonQtMethodInfo.cpp  PythonQtSlot.cpp  PythonQtVariants.cpp  PythonQtVariants.h  src.pri
PythonQt/tests/: PythonQtTests.cpp
libcurl/src/: curlsrc.vcproj
poco/: MANIFEST  VERSION
propertyeditor/: ReadmeRex.txt
qtpropertybrowser-2.5_1-opensource/: ReadmeRex.txt
tags/0.1/telepathy-libs/dbus-glib/dbus/: CMakeLists.txt  Makefile.in  dbus-glib.def
tags/0.1/telepathy-libs/dbus-glib/dbus/examples/statemachine/: Makefile.in
tags/0.1/telepathy-libs/loudmouth/loudmouth/: ._lm-message-node.c  ._lm-socket.c  ._lm-ssl-openssl.c  CMakeLists.txt  lm-sock.c  lm-ssl-gnutls.c
tags/0.1/telepathy-libs/telepathy-qt4/TelepathyQt4/: CMakeLists.txt  TelepathyQt4.pc  channel.cpp
telepathy-libs/: expat.cmake  telepathy-farsight.cmake
telepathy-libs/dbus-glib/: CMakeLists.txt  ChangeLog  README-WIN32.txt  config.h.in  configure  dbus-glib.patch
telepathy-libs/dbus-glib/doc/reference/: Makefile.in
telepathy-libs/dbus-glib/doc/reference/html/: ch02.html  dbus-glib-DBus-GObject-related-functions.html  dbus-glib-DBusGMethod.html
telepathy-libs/dbus-glib/test/: Makefile.in
telepathy-libs/dbus-glib/test/core/: Makefile.in
telepathy-libs/dbus-glib/test/interfaces/: Makefile.in
telepathy-libs/loudmouth/: CMakeLists.txt  loudmouth.spec
telepathy-libs/loudmouth/docs/: Makefile.in
telepathy-libs/loudmouth/docs/reference/: ._loudmouth-sections.txt
telepathy-libs/loudmouth/docs/reference/html/: ch01.html  index.html  loudmouth-lm-error.html
telepathy-libs/loudmouth/docs/reference/tmpl/: ._lm-error.sgml  ._lm-message-node.sgml
telepathy-libs/loudmouth/docs/reference/xml/: api-index-full.xml  lm-connection.xml  lm-message-node.xml  lm-message.xml  lm-ssl.xml
telepathy-libs/loudmouth/examples/: Makefile.in
telepathy-libs/loudmouth/loudmouth/: ._lm-connection.c  ._lm-error.c  ._lm-error.h  ._lm-ssl-generic.c  Makefile.in  asyncns.c  lm-connection.c  lm-socket.c
telepathy-libs/loudmouth/tests/: Makefile.in
telepathy-libs/telepathy-farsight/: telepathy-farsight.def
telepathy-libs/telepathy-gabble/: CMakeLists.txt
telepathy-libs/telepathy-gabble/extensions/: OLPC_Buddy_Info.xml
telepathy-libs/telepathy-gabble/lib/gibber/: CMakeLists.txt  gibber-fd-transport.c  gibber-resolver.c  gibber-sockets-win32.h
telepathy-libs/telepathy-gabble/src/: debug.c  ft-channel.c  jingle-content.c  media-stream.c  tube-stream.c  tubes-channel.c
telepathy-libs/telepathy-glib/: CMakeLists.txt  cmake_install.cmake
telepathy-libs/telepathy-glib/telepathy-glib/: CMakeLists.txt  cmake_install.cmake  debug.c
telepathy-libs/telepathy-qt4/: ChangeLog
telepathy-libs/telepathy-qt4/examples/call/: CMakeLists.txt  CTestTestfile.cmake  Makefile.in  farsight-channel.cpp
trunk/: ReadmeRex.txt
trunk/Caelum/: SConstruct
trunk/OpenJPEG/: DllOpenJPEG.vcproj
trunk/PythonQt/: PythonQt.pro
trunk/expat/: ReadmeRex.txt
trunk/libcurl/: vc9curl.sln
trunk/poco/: CONTRIBUTORS
trunk/propertyeditor/: CMakeLists.txt
trunk/propertyeditor/plugins/size/: CMakeLists.txt
trunk/telepathy-libs/: dbus.cmake  dbus_glib.cmake  glib.cmake  gstreamer.cmake  libsoup.cmake  openssl.cmake
trunk/telepathy-libs/telepathy-farsight/: CMakeLists.txt  README-WIN32.txt  telepathy-farsight.patch
trunk/telepathy-libs/telepathy-farsight/telepathy-farsight/: CMakeLists.txt  stream.c
trunk/telepathy-libs/telepathy-gabble/src/: CMakeLists.txt  bytestream-socks5.c  gabble.c  message-util.c
trunk/xmlrpc-epi/: xmlrpcepi.vcproj
(+2523 files in other folders)
